--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,107 @@
+body {
+  background-color: #dfe7ee;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100vw;
+  margin-bottom: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+header {
+  display: flex;
+  width: 100vw;
+  height: 5rem;
+  background-color: #ebf0f3;
+  box-shadow: 0px -30px 30px 20px rgba(0,0,0,0.77);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+header span {
+  margin: auto;
+  font-size: 3rem;
+  padding-bottom: 0.5rem;
+  box-sizing: border-box;
+  font-weight: 500;
+  color: rgb(13, 160, 197);
+  user-select: none;
+  cursor: pointer;
+}
+
+.card-container {
+  width: 80%;
+  margin: 4rem auto 3rem auto;
+  row-gap: 0.7rem;
+  column-gap: 1rem;
+  height: 400px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr 1fr;
+  height: auto;
+}
+
+.card {
+  height: 200px;
+  display: flex;
+  font-size: 45px;
+  user-select: none;
+  border: 2px solid rgba(13, 160, 197, 0.664);
+  border-radius: 10px;
+  box-shadow: -7px 0px 10px -5px rgba(0, 0, 0, 0.5);
+  transition: transform 200ms;
+}
+
+.card span {
+  margin: auto;
+}
+
+.wrong {
+  background-color: rgb(226, 59, 59);
+  border: 2px solid rgb(226, 59, 59);
+}
+
+.scores {
+  display: flex;
+}
+
+.scores span {
+  margin: auto;
+  background-color: rgb(99, 146, 146);
+  color: aliceblue;
+  border-radius: 15px;
+  padding: 1rem;
+  box-sizing: border-box;
+  width: 180px;
+  min-width: 100px;
+  max-width: 400px;
+  text-align: center;
+  user-select: none;
+}
+
+@media (hover: hover) {
+  .card:hover {
+    background-color: rgb(197, 206, 221);
+    cursor: pointer;
+    transform: translateY(-5px);
   }
-  to {
-    transform: rotate(360deg);
+
+  .wrong:hover {
+    background-color: rgb(226, 59, 59);
+  }
+
+  header span:hover {
+    color: rgb(5, 88, 114);
+  }
+}
+@media only screen and (max-width: 600px){
+  .card-container {
+    margin-top: 2rem;
+    width: 90%;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+  }
+
+  .card {
+    height: 150px;
   }
 }
