--- a/src/App.css
+++ b/src/App.css
@@ -41,11 +41,13 @@ header span {
   height: auto;
 }
 
+
 .card {
   height: 200px;
   display: flex;
   font-size: 45px;
-  
+  background-size: cover;
+  background-position: center;
   border: 2px solid rgba(13, 160, 197, 0.664);
   border-radius: 10px;
   box-shadow: -7px 0px 10px -5px rgba(0, 0, 0, 0.5);
