--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,14 @@
 body {
   background-color: #dfe7ee;
+  overflow-x: hidden;
 }
 
 .App {
   display: flex;
   flex-direction: column;
   width: 100vw;
-  margin-bottom: 20px;
 }
+
 
 header {
   display: flex;
@@ -39,16 +40,21 @@ header span {
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 1fr 1fr;
   height: auto;
+  animation-delay: 700ms;
+  animation: appear 500ms ease;
 }
 
 
 .card {
-  height: 200px;
+  position: relative;
+  height: 30vh;
   display: flex;
+  box-sizing: border-box;
   font-size: 45px;
   background-size: cover;
   background-position: center;
-  border: 2px solid rgba(13, 160, 197, 0.664);
+  background-image: '';
+  border: 2px solid rgb(13, 160, 197);
   border-radius: 10px;
   box-shadow: -7px 0px 10px -5px rgba(0, 0, 0, 0.5);
   transition: transform 200ms;
@@ -59,18 +65,49 @@ header span {
   user-select: none;
   pointer-events: none;
 }
-
 .wrong {
-  background-color: rgb(226, 59, 59);
-  border: 2px solid rgb(226, 59, 59);
+  display: flex;
+  position: relative;
+  background-image: red !important;
+  border: none;
+  box-sizing: border-box;
+  /* height: 30vh; */
+}
+
+.wrong::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  background-color: rgba(255, 255, 255, 0.578);
+  backdrop-filter: blur(5px) brightness(0.8);
+  border-radius: 7px;
+  font-family: inherit;
+  border: 4px solid rgb(219, 9, 9);
+  box-sizing: border-box;
+}
+.wrong::after {
+  margin: auto;
+  color: rgb(219, 9, 9);
+  font-weight: 600;
+  content: 'WRONG';
+  text-align: center;
+  font-size: 60px;
+  z-index: 3;
 }
 
 .scores {
   display: flex;
+  padding: 0 11%;
+  gap: 1rem;
 }
 
 .scores span {
-  margin: auto;
   background-color: rgb(99, 146, 146);
   color: aliceblue;
   border-radius: 15px;
@@ -81,6 +118,25 @@ header span {
   max-width: 400px;
   text-align: center;
   user-select: none;
+  font-size: 1rem;
+}
+
+.scores button {
+  margin-right: auto;
+  width: 130px;
+  border: none;
+  border-radius: 15px;
+  padding: 1rem;
+  box-sizing: border-box;
+  background-color: rgb(212, 89, 89);
+  color: aliceblue;
+  font-family: 'Segoe UI';
+  font-size: 1rem;
+}
+
+.scores button:hover {
+  background-color: rgb(161, 70, 70);
+  cursor: pointer;
 }
 
 .win-overlay {
@@ -121,6 +177,16 @@ header span {
 
   header span:hover {
     color: rgb(5, 88, 114);
+  }
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
   }
 }
 @media only screen and (max-width: 600px){
